[gd_scene load_steps=2 format=3 uid="uid://cao4qf5xwwkil"]

[ext_resource type="Script" path="res://console.gd" id="1_3klo0"]

[node name="Console" type="Control"]
process_mode = 3
top_level = true
z_index = 100
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_3klo0")

[node name="Panel" type="Panel" parent="."]
layout_mode = 0
offset_right = 572.0
offset_bottom = 411.0

[node name="MarginContainer" type="MarginContainer" parent="Panel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 5
theme_override_constants/margin_top = 5
theme_override_constants/margin_right = 5
theme_override_constants/margin_bottom = 5

[node name="VBoxContainer" type="VBoxContainer" parent="Panel/MarginContainer"]
layout_mode = 2

[node name="TopBar" type="Panel" parent="Panel/MarginContainer/VBoxContainer"]
modulate = Color(0, 0, 0, 1)
custom_minimum_size = Vector2(0, 8.17)
layout_mode = 2

[node name="OutputTextEdit" type="TextEdit" parent="Panel/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_colors/font_readonly_color = Color(0.521141, 0.521141, 0.521141, 1)
editable = false

[node name="HBoxContainer" type="HBoxContainer" parent="Panel/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="InputTextEdit" type="LineEdit" parent="Panel/MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="ResizeHandle" type="Panel" parent="Panel/MarginContainer/VBoxContainer/HBoxContainer"]
modulate = Color(0.205117, 0.205117, 0.205117, 1)
custom_minimum_size = Vector2(30.855, 0)
layout_mode = 2
